[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = {git = "https://github.com/noneofyourbusiness1415252/replit-py"}
discord = "^2.2.2"
requests = "2.28.2"
pandas = "2.0.0"
SQLAlchemy = "^2.0.10"
psycopg = "3.1.8"
psycopg2-binary = "2.9.6"
Printer1111 = "^1.0.1"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"